# mofscreen

./: .gitignore  LICENSE  README.md  USER_GUIDE.md  pyproject.toml
examples/: basic_lithium.py  calc_adsorption_only.py  calc_bandgap_only.py  calc_formation_only.py  calc_volume_only.py  parsing_results.py
