[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mofscreen"
version = "1.0.2"
description = "Automated DFT screening of MOFs for Li-ion anode material properties using CP2K"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
    { name = "Sanjjiiev", email = "sanjjiiev005@gmail.com" }
]

keywords = [
    "DFT", "MOF", "CP2K", "bandgap", "adsorption",
    "formation-energy", "anode", "battery", "computational-chemistry"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research"
]

dependencies = [
    "numpy>=1.21",
    "ase>=3.22"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "build", "twine"]

[project.urls]
Homepage      = "https://github.com/sanjjiiev/mofscreen"
Repository    = "https://github.com/sanjjiiev/mofscreen"
Documentation = "https://github.com/sanjjiiev/mofscreen#readme"
Issues        = "https://github.com/sanjjiiev/mofscreen/issues"

[project.scripts]
mofscreen = "mofscreen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mofscreen*"]